--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "webpack-cli": "^3.1.0"
     },
     "dependencies": {
+        "@tensorflow/tfjs": "^1.0.3",
         "phaser": "3.16.2",
         "phaser-animated-tiles": "^2.0.2",
         "react": "^16.8.3",
